# RustServerForFireplace

./: .gitignore  Cargo.toml  README.md  outAnalysis.txt
cards/: boar.rhai
content/: test.lua
content/cards/: example_card.arhai
content/cards/basic/: archmage.arhai  bloodfenRaptor.lua  boar.arhai  boar.lua  boulderfistOgre.lua  chillwindYeti.lua  coreHound.lua  dragonlingMechanic.lua  hunter.lua  magmaRaider.lua  mechanicalDragonling.lua  murlocRaider.lua  oasisSnapjaw.lua  riverCrocolisk.lua  stormwindChampion.arhai  stormwindChampion.lua  warGolem.lua
content/decks/: test.deck
src/: AI_Utils.rs  ai_game_state.rs  boar.rhai  card.rs  client_message.rs  client_option.rs  controller.rs  database_utils.rs  entity.rs  game_state.rs  game_thread.rs  macros.rs  main.rs  minion_card.rs  minion_vec.rs  player_thread.rs  process_message.rs  rune_match.rs  rune_vm.rs  tags_list.rs  thread_management.rs
src/ai/: ai_action.rs  ai_play_card.rs  ai_player.rs  ai_request.rs  ai_utils.rs  mod.rs
src/cards/: boar.arhai
src/cards/basic/: boar.arhai
src/runes/: add_enchantment.rs  add_tag.rs  attack.rs  create_card.rs  create_minion.rs  damage_rune.rs  deal_card.rs  destroy.rs  end_game.rs  heal.rs  kill_minion.rs  mod.rs  modify_attack.rs  modify_health.rs  modify_hero_health.rs  mulligan.rs  new_controller.rs  new_controller.rs.bk  play_card.rs  play_minion.rs  remove_tag.rs  report_minion_to_client.rs  rotate_turn.rs  set_attack.rs  set_base_mana.rs  set_current_controller.rs  set_health.rs  set_mana.rs  shuffle_card.rs  silence.rs  start_game.rs  summon_minion.rs
(+3 files in other folders)
